--- a/src/GeoConvertSSE.csproj
+++ b/src/GeoConvertSSE.csproj
@@ -52,30 +52,26 @@
   <ItemGroup>
     <Reference Include="GeoUk, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\GeoUK.1.1.0\lib\portable-net45+win+wpa81+wp80\GeoUk.dll</HintPath>
-      <Private>True</Private>
     </Reference>
-    <Reference Include="GeoUk.OSTN, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\GeoUK.OSTN.1.1.0\lib\portable-net45+win+wpa81+wp80\GeoUk.OSTN.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Google.Protobuf, Version=3.3.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
-      <HintPath>packages\Google.Protobuf.3.3.0\lib\net45\Google.Protobuf.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Google.Protobuf, Version=3.5.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
+      <HintPath>packages\Google.Protobuf.3.5.1\lib\net45\Google.Protobuf.dll</HintPath>
     </Reference>
     <Reference Include="Grpc.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=d754f35622e28bad, processorArchitecture=MSIL">
-      <HintPath>packages\Grpc.Core.1.4.1\lib\net45\Grpc.Core.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>packages\Grpc.Core.1.11.0\lib\net45\Grpc.Core.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>packages\NLog.4.4.12\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>packages\NLog.4.5.3\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Interactive.Async, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>packages\System.Interactive.Async.3.1.1\lib\net45\System.Interactive.Async.dll</HintPath>
-      <Private>True</Private>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -131,20 +127,20 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets" Condition="Exists('packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets'))" />
-  </Target>
   <PropertyGroup>
-    <PreBuildEvent>set TOOLS_DIR="$(ProjectDir)packages\Grpc.Tools.1.4.1\tools\windows_x64"
+    <PreBuildEvent>set TOOLS_DIR="$(ProjectDir)packages\Grpc.Tools.1.11.0\tools\windows_x64"
 set PROTO_DIR="$(ProjectDir)..\proto"
 set OUT_DIR="$(ProjectDir)ProtobufGenerated"
 %25TOOLS_DIR%25\protoc -I%25PROTO_DIR%25 --grpc_out=%25OUT_DIR%25 --csharp_out=%25OUT_DIR%25 --plugin=protoc-gen-grpc=%25TOOLS_DIR%25\grpc_csharp_plugin.exe %25PROTO_DIR%25\ServerSideExtension.proto
 exit /b %25ERRORLEVEL%25</PreBuildEvent>
   </PropertyGroup>
+  <Import Project="packages\Grpc.Core.1.11.0\build\net45\Grpc.Core.targets" Condition="Exists('packages\Grpc.Core.1.11.0\build\net45\Grpc.Core.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\Grpc.Core.1.11.0\build\net45\Grpc.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Grpc.Core.1.11.0\build\net45\Grpc.Core.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
